# tinyercot

./: .env.example  .gitignore  CLAUDE.md  README.md  api_response_fields.json  products.json  pyproject.toml
examples/: demo.py  streaming_stats.py
tinyercot/: __init__.py  _client.py  _generated.py
tools/: generate_client.py
