[project]
name = "tinyercot"
version = "0.1.0"
description = "Tiny fully-typed ERCOT API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cachetools>=6.2.4",
    "httpx>=0.28.1",
    "httpx-retries>=0.4.5",
    "pydantic>=2.10.0",
    "tqdm>=4.67.1",
    "pandas>=2.0"
]

[dependency-groups]
dev = [
    "ipython>=9.8.0",
    "tqdm>=4.67.1",
]

[tool.ruff]
extend-exclude = ["tinyercot/_generated.py"]