[project]
name = "tinyercot"
version = "0.2.2"
description = "Tiny fully-typed ERCOT API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Kevin Kenyon", email = "kevin@poweredbylight.com" },
]

dependencies = [
    "aiolimiter>=1.1.0",
    "cachetools>=6.2.4",
    "httpx>=0.28.1",
    "httpx-retries>=0.4.5",
    "pydantic>=2.10.0",
    "tqdm>=4.67.1",
    "pandas>=2.0",
]

[project.urls]
Homepage = "https://github.com/kvkenyon/tinyercot"
Repository = "https://github.com/kvkenyon/tinyercot"
Issues = "https://github.com/kvkenyon/tinyercot/issues"

[dependency-groups]
dev = [
    "ipython>=9.8.0",
    "tqdm>=4.67.1",
]


[tool.ruff]
extend-exclude = ["tinyercot/_generated.py"]
